option(
	'with_nss',
	type: 'boolean',
	value: true,
	description: 'build NSS module'
)

option(
	'with_pam',
	type: 'boolean',
	value: true,
	description: 'build PAM module'
)

option(
	'with_gtk3',
	type: 'boolean',
	value: true,
	description: 'build GTK3 registration form'
)

option(
	'with_tests',
	type: 'boolean',
	value: true,
	description: 'build unit tests'
)
