option(
	'with_nss',
	type: 'boolean',
	value: true,
	description: 'build NSS module'
)

option(
	'with_pam',
	type: 'boolean',
	value: true,
	description: 'build PAM module'
)

option(
	'with_cli',
	type: 'boolean',
	value: true,
	description: 'build CLI executables'
)

option(
	'with_gtk3',
	type: 'boolean',
	value: true,
	description: 'build GTK3 registration form'
)

option(
	'with_tests',
	type: 'boolean',
	value: true,
	description: 'build unit tests'
)

option(
	'libasan_so_version',
	type: 'integer',
	value: 5,
	description: 'version of the address sanitizer library for NSS unit tests'
)

option(
	'with_man',
	type: 'boolean',
	value: false,
	description: 'build man pages'
)

