option(
	'with_nss',
	type: 'boolean',
	value: true,
	description: 'build NSS module'
)

option(
	'with_pam',
	type: 'boolean',
	value: true,
	description: 'build PAM module'
)

option(
	'with_cli',
	type: 'boolean',
	value: true,
	description: 'build CLI executables'
)

option(
	'with_daemon',
	type: 'boolean',
	value: true,
	description: 'build daemon'
)

option(
	'with_tests',
	type: 'boolean',
	value: true,
	description: 'build unit tests'
)

option(
	'with_integration_tests',
	type: 'boolean',
	value: true,
	description: 'build more unit tests'
)

option(
	'libasan_so_version',
	type: 'integer',
	value: 5,
	description: 'version of the address sanitizer library for NSS unit tests'
)

option(
	'with_man',
	type: 'boolean',
	value: false,
	description: 'build man pages'
)

option(
	'developer',
	type: 'boolean',
	value: false,
	description: 'developer build'
)

option(
	'default_editor',
	type: 'string',
	value: 'vi',
	description: 'set default editor for changing entities (when EDITOR is not set)'
)
