i18n = import('i18n')
i18n.gettext(
	meson.project_name(),
	args: [
		'--from-code=UTF-8',
		'--add-comments',
		'--keyword=native:1',
		'--keyword=native_n:1,1',
		'--keyword=native_message:2',
		'--keyword=native_message_n:3,3',
	]
)

# msgid_plural "_ сущностей."
# msgstr[0] "_ сущность."
# msgstr[1] "_ сущности."
# msgstr[2] "_ сущностей."
